infra/k8s/clickhouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: logan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:latest
          ports:
            - containerPort: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: logan
spec:
  selector:
    app: clickhouse
  ports:
    - port: 8123
      targetPort: 8123
