infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logan-web
  namespace: logan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logan-web
  template:
    metadata:
      labels:
        app: logan-web
    spec:
      containers:
        - name: web
          image: ghcr.io/itwake/logan-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: logan-web
  namespace: logan
spec:
  selector:
    app: logan-web
  ports:
    - port: 3000
      targetPort: 3000
